[project]
name = "nline-data-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jackson Goode", email = "jacksongoode@proton.me" }
]
dependencies = [
    "pandas>=2.2.2",
    "polars>=1.1.0",
    "gcsfs>=2024.6.1",
    "ipykernel>=6.29.5",
    "pyarrow>=17.0.0",
    "google-cloud-storage>=2.17.0",
    "dask>=2024.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nline_data_api"]
