[project]
name = "nline-data-api"
version = "0.1.0"
description = "A lightweight utility to access the MCC public data collected by nLine Inc."
authors = [{ name = "nLine", email = "nline@info.io" }]
dependencies = [
  "pandas>=2.2.2",
  "polars>=1.1.0",
  "ipykernel>=6.29.5",
  "pyarrow>=17.0.0",
  "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nline_data_api"]
