[project]
name = "nline-data-api"
version = "0.1.0"
description = "A lightweight utility to access the MCC public data collected by nLine Inc."
authors = [{ name = "nLine", email = "nline@info.io" }]
dependencies = ["pandas", "polars", "ipykernel", "pyarrow", "requests"]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
requires-python = ">=3.12"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nline_data_api"]
